--- a/book.bib
+++ b/book.bib
@@ -16,3 +16,16 @@
   edition={3},
   publisher={Routledge}
 }
+
+@article{nakagawa2013,
+  title={A general and simple method for obtaining R2 from generalized linear mixed-effects models},
+  author={Nakagawa, Shinichi and Schielzeth, Holger},
+  journal={Methods in Ecology and Evolution},
+  volume={4},
+  number={2},
+  pages={133--142},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+
+
